# rust-panel

./: .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
.github/workflows/: publish.yml
.zed/: tasks.json
backend/: Cargo.toml
backend/src/: app.rs  error.rs  main.rs
node/: Cargo.toml
node/src/: app.rs  config.rs  error.rs  main.rs
node/src/models/: server.rs
node/src/routes/: mod.rs
node/src/routes/api/: mod.rs
node/src/routes/api/servers/: mod.rs
