[workspace]
members = ["backend", "node"]
resolver = "3"

[workspace.package]
version = "1.0.0"
authors = ["IThundxr", "AlsoSylv"]

[workspace.dependencies]
axum = "0.8.4"
bollard = "0.19.3"
dotenvy = "0.15.7"
russh = "0.54.6"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.6"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
