[workspace]
members = ["backend", "node"]
resolver = "3"

[workspace.package]
version = "1.0.0"
authors = ["IThundxr", "AlsoSylv"]

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros"] } # TODO - Disable macros
bollard = "0.19.4"
dotenvy = "0.15.7"
russh = "0.56.0"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
