[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
dotenvy.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true