[package]
name = "node"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
bollard.workspace = true
config.workspace = true
dotenvy.workspace = true
inotify.workspace = true
russh.workspace = true
russh-sftp.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true